--- a/pages/resenias.html
+++ b/pages/resenias.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Descubre las opiniones y reseñas de nuestros clientes sobre nuestros productos de papelería artesanal y de venta comercial. Lee las experiencias de quienes han encontrado calidad, originalidad y satisfacción en Khali Desing."
-    />
-    <meta
-      name="keywords"
-      content="reseñas, opiniones, testimonios, productos de papelería, artículos artesanales, venta comercial, satisfacción del cliente, calidad, originalidad, experiencias, feedback"
-    />
+    <meta name="description" content="Descubre las opiniones y reseñas de nuestros clientes sobre nuestros productos de papelería artesanal y de venta comercial. Lee las experiencias de quienes han encontrado calidad, originalidad y satisfacción en Khali Desing." />
+    <meta name="keywords" content="reseñas, opiniones, testimonios, productos de papelería, artículos artesanales, venta comercial, satisfacción del cliente, calidad, originalidad, experiencias, feedback" />
     <title>Reseñas</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
@@ -27,41 +16,22 @@
         <img src="../assets/img/papeleria-logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarWithDropdown"
-          aria-controls="navbarWithDropdown"
-          aria-expanded="false"
-          aria-label="Toogle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarWithDropdown">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html"
-                >Inicio</a
-              >
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="../pages/resenias.html"
-                >Reseñas</a
-              >
+              <a class="nav-link" aria-current="page" href="../pages/resenias.html">Reseñas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/catalogo.html">Catálogo</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="../pages/proceso-de-personalizacion.html"
-                >Proceso de Personalización</a
-              >
+              <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Personalización</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/contacto.html">Contacto</a>
@@ -72,35 +42,18 @@
     </header>
     <main>
       <h1>Reseñas</h1>
-      <h2>
-        Descubre lo que dicen nuestros clientes satisfechos sobre los productos
-        de Khali Design
-      </h2>
+      <h2>Descubre lo que dicen nuestros clientes satisfechos sobre los productos de Khali Design</h2>
       <section class="container-fluid">
         <div class="row d-flex justify-content-center">
           <h3>Sofía</h3>
           <div class="col-lg-4 d-flex justify-content-center">
             <img src="../assets/img/sofia.jpg" alt="sofia" />
           </div>
-          <p class="col-lg-8">
-            "¡Me encantan los productos de Khali Design! Recientemente compré un
-            hermoso cuaderno personalizado con mi nombre en la portada. La
-            atención al detalle y la calidad del trabajo artesanal son
-            excepcionales. ¡Definitivamente recomendaría Khali Design para
-            aquellos que buscan artículos de papelería únicos y de alta
-            calidad!"
-          </p>
+          <p class="col-lg-8">"¡Me encantan los productos de Khali Design! Recientemente compré un hermoso cuaderno personalizado con mi nombre en la portada. La atención al detalle y la calidad del trabajo artesanal son excepcionales. ¡Definitivamente recomendaría Khali Design para aquellos que buscan artículos de papelería únicos y de alta calidad!"</p>
         </div>
         <div class="row d-flex justify-content-center">
-          <h3>Alejandro</h3>
-          <p class="col-lg-8">
-            "Descubrí Khali Design y quedé impresionado por la variedad de
-            productos que ofrecen. Compré un juego de tarjetas de felicitación y
-            no podría estar más satisfecho. Los diseños son hermosos y el papel
-            utilizado es de excelente calidad. Sin duda, Khali Design se ha
-            convertido en mi tienda favorita de papelería artesanal. ¡Volveré a
-            comprar pronto!"
-          </p>
+          <h3 class="alejandro">Alejandro</h3>
+          <p class="col-lg-8">"Descubrí Khali Design y quedé impresionado por la variedad de productos que ofrecen. Compré un juego de tarjetas de felicitación y no podría estar más satisfecho. Los diseños son hermosos y el papel utilizado es de excelente calidad. Sin duda, Khali Design se ha convertido en mi tienda favorita de papelería artesanal. ¡Volveré a comprar pronto!"</p>
           <div class="col-lg-4 d-flex justify-content-center">
             <img src="../assets/img/alejandro.jpg" alt="alejandro" />
           </div>
@@ -110,14 +63,7 @@
           <div class="col-lg-4 d-flex justify-content-center">
             <img src="../assets/img/ana.jpg" alt="ana" />
           </div>
-          <p class="col-lg-8">
-            "Khali Design es simplemente asombroso. Compré un set de papelería
-            de venta comercial que incluía bolígrafos, notas adhesivas y clips,
-            y estoy muy contenta con mi compra. Los productos son elegantes,
-            funcionales y de alta calidad. Es maravilloso poder encontrar todo
-            lo que necesito en un solo lugar. Recomiendo encarecidamente los
-            productos de Khali Design".
-          </p>
+          <p class="col-lg-8">"Khali Design es simplemente asombroso. Compré un set de papelería de venta comercial que incluía bolígrafos, notas adhesivas y clips, y estoy muy contenta con mi compra. Los productos son elegantes, funcionales y de alta calidad. Es maravilloso poder encontrar todo lo que necesito en un solo lugar. Recomiendo encarecidamente los productos de Khali Design".</p>
         </div>
       </section>
     </main>
@@ -136,9 +82,5 @@
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
     </footer>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
