--- a/index.html
+++ b/index.html
@@ -4,25 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Sumérgete en el encanto de Khali Desing, donde encontrarás artículos de papelería personalizados y de venta comercial. Descubre productos únicos y de alta calidad que te permitirán expresar tu estilo y creatividad. ¡Explora nuestra tienda y encuentra algo especial para ti!"
-    />
-    <meta
-      name="keywords"
-      content="papelería artesanal, productos personalizados, artículos de venta comercial, diseño artesanal, papelería única, productos de calidad, creatividad, estilo personal, regalos personalizados, tienda de papelería, productos exclusivos, expresión personal"
-    />
+    <meta name="description" content="Sumérgete en el encanto de Khali Desing, donde encontrarás artículos de papelería personalizados y de venta comercial. Descubre productos únicos y de alta calidad que te permitirán expresar tu estilo y creatividad. ¡Explora nuestra tienda y encuentra algo especial para ti!" />
+    <meta name="keywords" content="papelería artesanal, productos personalizados, artículos de venta comercial, diseño artesanal, papelería única, productos de calidad, creatividad, estilo personal, regalos personalizados, tienda de papelería, productos exclusivos, expresión personal" />
     <title>Khali Desing</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -31,37 +17,23 @@
         <img src="assets/img/papeleria-logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarWithDropdown"
-          aria-controls="navbarWithDropdown"
-          aria-expanded="false"
-          aria-label="Toogle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarWithDropdown">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
-                >Inicio</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="pages/resenias.html"
-                >Reseñas</a
-              >
+              <a class="nav-link" aria-current="page" href="pages/resenias.html">Reseñas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/catalogo.html">Catálogo</a>
             </li>
             <li class="nav-item"></li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/proceso-de-personalizacion.html"
-                >Proceso de Personalización</a
-              >
+              <a class="nav-link" href="pages/proceso-de-personalizacion.html">Proceso de Personalización</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -80,14 +52,7 @@
           <div class="img-container"></div>
           <div class="text">
             <h2>¿Quiénes Somos?</h2>
-            <p>
-              Khali Design es un emprendimiento personal que se especializa en
-              la creación de artículos de papelería personalizados. Nos
-              dedicamos a proporcionar a nuestros clientes productos únicos y
-              distintivos que reflejen su identidad. Además, ofrecemos una
-              selección de artículos de papelería de venta comercial de alta
-              calidad.
-            </p>
+            <p>Khali Design es un emprendimiento personal que se especializa en la creación de artículos de papelería personalizados. Nos dedicamos a proporcionar a nuestros clientes productos únicos y distintivos que reflejen su identidad. Además, ofrecemos una selección de artículos de papelería de venta comercial de alta calidad.</p>
           </div>
         </div>
       </section>
@@ -97,33 +62,17 @@
           <div class="articulos">
             <div class="card">
               <h3>Box Dinosaurio</h3>
-              <p>
-                Sumérgete en una emocionante aventura jurásica con nuestra caja
-                temática de dinosaurios. Descubre réplicas de fósiles, libros
-                ilustrados y juegos de excavación. ¡Regala diversión
-                prehistórica!
-              </p>
+              <p>Sumérgete en una emocionante aventura jurásica con nuestra caja temática de dinosaurios. Descubre réplicas de fósiles, libros ilustrados y juegos de excavación. ¡Regala diversión prehistórica!</p>
               <button>Contenido</button>
             </div>
             <div class="card">
               <h3>Box Sirena</h3>
-              <p>
-                Sumérgete en un mundo mágico bajo el mar con nuestra encantadora
-                caja temática de sirenas. Descubre accesorios brillantes, joyas
-                marinas y hermosas ilustraciones. ¡Deja volar tu imaginación y
-                sé una verdadera sirena!
-              </p>
+              <p>Sumérgete en un mundo mágico bajo el mar con nuestra encantadora caja temática de sirenas. Descubre accesorios brillantes, joyas marinas y hermosas ilustraciones. ¡Deja volar tu imaginación y sé una verdadera sirena!</p>
               <button>Contenido</button>
             </div>
             <div class="card">
               <h3>Box Unicornio</h3>
-              <p>
-                Descubre un mundo mágico con nuestra caja temática de
-                unicornios. Sumérgete en colores vibrantes, accesorios
-                encantadores y déjate llevar por la magia de estos seres
-                legendarios. ¡Embárcate en una aventura llena de fantasía y
-                encanto!
-              </p>
+              <p>Descubre un mundo mágico con nuestra caja temática de unicornios. Sumérgete en colores vibrantes, accesorios encantadores y déjate llevar por la magia de estos seres legendarios. ¡Embárcate en una aventura llena de fantasía y encanto!</p>
               <button>Contenido</button>
             </div>
           </div>
@@ -145,9 +94,5 @@
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
     </footer>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
