--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Explora nuestro catálogo de productos de papelería artesanal y de venta comercial. Descubre una amplia variedad de artículos únicos, desde libretas y cintas decorativas hasta lapiceras y calendarios. Encuentra la inspiración que necesitas para expresar tu estilo y creatividad con Khali Desing."
-    />
-    <meta
-      name="keywords"
-      content="catálogo de productos, papelería artesanal, venta comercial, libretas, cintas decorativas, lapiceras, calendarios, productos únicos, expresión creativa, estilo personal, inspiración"
-    />
+    <meta name="description" content="Explora nuestro catálogo de productos de papelería artesanal y de venta comercial. Descubre una amplia variedad de artículos únicos, desde libretas y cintas decorativas hasta lapiceras y calendarios. Encuentra la inspiración que necesitas para expresar tu estilo y creatividad con Khali Desing." />
+    <meta name="keywords" content="catálogo de productos, papelería artesanal, venta comercial, libretas, cintas decorativas, lapiceras, calendarios, productos únicos, expresión creativa, estilo personal, inspiración" />
     <title>Catálogo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
@@ -27,41 +16,22 @@
         <img src="../assets/img/papeleria-logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarWithDropdown"
-          aria-controls="navbarWithDropdown"
-          aria-expanded="false"
-          aria-label="Toogle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarWithDropdown">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html"
-                >Inicio</a
-              >
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="../pages/resenias.html"
-                >Reseñas</a
-              >
+              <a class="nav-link" aria-current="page" href="../pages/resenias.html">Reseñas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/catalogo.html">Catálogo</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="../pages/proceso-de-personalizacion.html"
-                >Proceso de Personalización</a
-              >
+              <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Personalización</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/contacto.html">Contacto</a>
@@ -79,134 +49,84 @@
             <img src="../assets/img/variedad-cintas.png" alt="cintas" />
             <div class="card-body">
               <h3>Cintas</h3>
-              <p>
-                En todos los formatos y colores, con diferentes diseños para que
-                encuentre el de su preferencia.
-              </p>
+              <p>En todos los formatos y colores, con diferentes diseños para que encuentre el de su preferencia.</p>
             </div>
           </article>
           <article>
             <img src="../assets/img/variedad-fibras.png" alt="fibras" />
             <div class="card-body">
               <h3>Fibras</h3>
-              <p>
-                En todos los colores y modelos, elija los que más le gusten.
-              </p>
+              <p>En todos los colores y modelos, elija los que más le gusten.</p>
             </div>
           </article>
           <article>
             <img src="../assets/img/variedad-lapiceras.png" alt="lapiceras" />
             <div class="card-body">
               <h3>Lapiceras</h3>
-              <p>
-                Para niños y adultos, diseños variados tanto para uso personal
-                como para utilizar en la oficina.
-              </p>
+              <p>Para niños y adultos, diseños variados tanto para uso personal como para utilizar en la oficina.</p>
             </div>
           </article>
           <article>
-            <img
-              src="../assets/img/resaltadores-varios.png"
-              alt="resaltadores"
-            />
+            <img src="../assets/img/resaltadores-varios.png" alt="resaltadores" />
             <div class="card-body">
               <h3>Resaltadores</h3>
-              <p>
-                Ofrecemos varios modelos para que no dejes de resaltar tus ideas
-                y apuntes, tenemos en colores convencionales y también nuestra
-                gama de resaltadores color pastel.
-              </p>
+              <p>Ofrecemos varios modelos para que no dejes de resaltar tus ideas y apuntes, tenemos en colores convencionales y también nuestra gama de resaltadores color pastel.</p>
             </div>
           </article>
           <article>
-            <img
-              src="../assets/img/libreta-harry-potter.png"
-              alt="libretas-harry-potter"
-            />
+            <img src="../assets/img/libreta-harry-potter.png" alt="libretas harry potter" />
             <div class="card-body">
               <h3>Libretas Harry Potter</h3>
-              <p>
-                Libretas de 50 hojas rayadas con diseños inspirados en la saga
-                de Harry Potter.
-              </p>
+              <p>Libretas de 50 hojas rayadas con diseños inspirados en la saga de Harry Potter.</p>
             </div>
           </article>
           <article>
-            <img
-              src="../assets/img/blocks-de-notas.png"
-              alt="blocks-de-notas"
-            />
+            <img src="../assets/img/blocks-de-notas.png" alt="blocks de notas" />
             <div class="card-body">
               <h3>Blocks de notas</h3>
-              <p>
-                Diseños hechos a pedido para que sus notas tengan el mejor
-                estilo.
-              </p>
+              <p>Diseños hechos a pedido para que sus notas tengan el mejor estilo.</p>
             </div>
           </article>
           <article>
-            <img
-              src="../assets/img/planificadores-semanales.png"
-              alt="planificadores-semanales"
-            />
+            <img src="../assets/img/planificadores-semanales.png" alt="planificadores semanales" />
             <div class="card-body">
               <h3>Planificadores Semanales</h3>
               <p>En tamaños y diseños hechos a su medida.</p>
             </div>
           </article>
           <article>
-            <img
-              src="../assets/img/recetarios-personalizados.png"
-              alt="recetarios"
-            />
+            <img src="../assets/img/recetarios-personalizados.png" alt="recetarios" />
             <div class="card-body">
               <h3>Recetarios</h3>
-              <p>
-                Dele un toque personalizado a todas esas recetas que atesora.
-              </p>
+              <p>Dele un toque personalizado a todas esas recetas que atesora.</p>
             </div>
           </article>
           <article>
             <img src="../assets/img/calendarios.jpg" alt="calendarios" />
             <div class="card-body">
               <h3>Calendarios</h3>
-              <p>
-                Organiza tu tiempo con estilo: descubre nuestros calendarios,
-                donde la funcionalidad se combina con hermosos diseños para
-                inspirar cada día del año.
-              </p>
+              <p>Organiza tu tiempo con estilo: descubre nuestros calendarios, donde la funcionalidad se combina con hermosos diseños para inspirar cada día del año.</p>
             </div>
           </article>
           <article>
             <img src="../assets/img/pinturas.jpg" alt="pinturas" />
             <div class="card-body">
               <h3>Pinturas</h3>
-              <p>
-                Descubre la magia de las pinturas: colores que cobran vida y
-                emociones que se desbordan en cada trazo.
-              </p>
+              <p>Descubre la magia de las pinturas: colores que cobran vida y emociones que se desbordan en cada trazo.</p>
             </div>
           </article>
           <article>
             <img src="../assets/img/cartulinas.jpg" alt="cartulinas" />
             <div class="card-body">
               <h3>Cartulinas</h3>
-              <p>
-                Explora un mundo de posibilidades creativas con nuestras
-                cartulinas: la base perfecta para dar vida a tus ideas con
-                colores vibrantes y texturas cautivadoras.
-              </p>
+              <p>Explora un mundo de posibilidades creativas con nuestras cartulinas: la base perfecta para dar vida a tus ideas con colores vibrantes y texturas cautivadoras.</p>
             </div>
           </article>
           <article>
             <img src="../assets/img/agendas.jpg" alt="agendas" />
             <div class="card-body">
               <h3>Agendas</h3>
-              <p>
-                Planea tu vida con elegancia: nuestras agendas son el compañero
-                perfecto para organizar tus metas, eventos y momentos especiales
-                con estilo y practicidad.
-              </p>
+              <p>Planea tu vida con elegancia: nuestras agendas son el compañero perfecto para organizar tus metas, eventos y momentos especiales con estilo y practicidad.</p>
             </div>
           </article>
         </div>
@@ -227,9 +147,5 @@
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
     </footer>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </html>
